# sinkhorn-hti

./: .gitattributes  .gitignore  LICENSE  README.md  sinkhorn_hti.ipynb
report/: main.tex  numbers.tex  refs.bib  table_results.tex
sinkhorn-hti/: README.md  conftest.py  pyproject.toml  run_headline.py
sinkhorn-hti/runs/: entropic_seed5.json  entropic_seed5.pkl  lbfgs_maxiter20_seed5.json  lbfgs_maxiter20_seed5.pkl  lbfgs_seed5.json  lbfgs_seed5.pkl
sinkhorn-hti/scripts/: build_report.sh  extra_analyses.py  regenerate_figs.py  run_notebook.sh
sinkhorn-hti/sinkhorn_hti/: __init__.py  caching.py  config.py  ctransform.py  lagrangian.py  losses.py  metrics.py  networks.py  runs.py  sampling.py  train.py
sinkhorn-hti/sinkhorn_hti/data/: __init__.py  semicircles.py
sinkhorn-hti/tests/: test_cache.py  test_ctransform.py  test_ctransform_consistency.py  test_data.py  test_gaussian_ot.py  test_lagrangian.py  test_networks.py  test_sampling_locate_interval.py  test_soft_ctransform.py  test_train_smoke.py
